--- a/app.json
+++ b/app.json
@@ -1,7 +1,6 @@
 {
   "pages": [
-    "pages/me/usCenten/usCenten"
-,
+
     "pages/Home/Home",
     "pages/me/me",
     "pages/index/index",
@@ -22,7 +21,10 @@
     "pages/me/aboutus/aboutus",
     "pages/Home/search/search",
     "pages/Home/registerDevice/registerDevice",
-    "pages/Devices/deviceDetail/qqNavigation/qqNavigation"
+    "pages/Devices/deviceDetail/qqNavigation/qqNavigation",
+    "pages/me/usCenten/usCenten"
+
+
   ],
   "window": {
     "backgroundTextStyle": "light",
