--- a/app.json
+++ b/app.json
@@ -35,8 +35,8 @@
   },
   "tabBar": {
     "color": "#000",
-    "selectedColor": "#1296db",
-    "backgroundColor": "#fff",
+    "selectedColor": "#fff",
+    "backgroundColor": "#484f5f",
     "list": [
       {
         "pagePath": "pages/Home/Home",
